# Simple-Benchmark-C-Header

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  defs.bzl
examples/: BUILD  bench_function.c  cpu_bound_example.c  memory_bound_example.c  mixed_workload_example.c
src/: BUILD  simple_bench.h
tests/: BUILD  test_simple_bench.c
tools/: unity_test.bzl
tools/ThrowTheSwitch/: my_config.yml
tools/ThrowTheSwitch/Unity/: BUILD  unity.bzl
tools/dbg-macro/: BUILD  OPTIONS.md  example_dbg-macro.c
