module(
    name = "simple_benchmark",
    version = "0.1.1",
)

bazel_dep(name = "rules_cc", version = "0.2.17")

#############################
# Load external non-Bazel libraries
#############################

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# unity - A simple unit testing library for C.
http_archive(
    name = "Unity",
    build_file = "@//:third_party/Unity.BUILD",
    sha256 = "4598298723ecca1f242b8c540a253ae4ab591f6810cbde72f128961007683034",
    strip_prefix = "Unity-2.5.2",
    urls = [
        "https://github.com/ThrowTheSwitch/Unity/archive/refs/tags/v2.5.2.zip",
    ],
)
